# CDrone

./: CMakeLists.txt  README.md  main.cpp
include/: DataStruct.h  PiHal.h  RadioTransmitter.h  TelemetricService.h
src/: RadioTransmitter.cpp  TelemetricService.cpp
